# docs/api/openapi.json
@@ -851,19 +851,19 @@
         "parameters": [
           {
             "in": "path",
-            "name": "profile_id",
+            "name": "listing_id",
             "required": true,
             "schema": {
-              "title": "Profile Id",
+              "title": "Listing Id",
               "type": "string"
             }
           },
           {
             "in": "path",
-            "name": "listing_id",
+            "name": "profile_id",
             "required": true,
             "schema": {
-              "title": "Listing Id",
+              "title": "Profile Id",
               "type": "string"
             }
           },
